cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Sixth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Sixth main.c)
add_executable(CPrimePlus_Sixth_Book_1 Book_1.c)
add_executable(CPrimePlus_Sixth_Book_2 Book_2.c)
add_executable(CPrimePlus_Sixth_Book_3 Book_3.c)
add_executable(CPrimePlus_Sixth_Book_4 Book_4.c)
add_executable(CPrimePlus_Sixth_Book_5 Book_5.c)
add_executable(CPrimePlus_Sixth_Book_6 Book_6.c)
add_executable(CPrimePlus_Sixth_Book_7 Book_7.c)
add_executable(CPrimePlus_Sixth_Book_8 Book_8.c)
add_executable(CPrimePlus_Sixth_Book_9 Book_9.c)
add_executable(CPrimePlus_Sixth_Book_10 Book_10.c)
add_executable(CPrimePlus_Sixth_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Sixth_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Sixth_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Sixth_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Sixth_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Sixth_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Sixth_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Sixth_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Sixth_Practice_9 Practice_9.c)
add_executable(CPrimePlus_Sixth_Practice_10 Practice_10.c)
add_executable(CPrimePlus_Sixth_Practice_11 Practice_11.c)
add_executable(CPrimePlus_Sixth_Practice_12 Practice_12.c)
add_executable(CPrimePlus_Sixth_Practice_13 Practice_13.c)
add_executable(CPrimePlus_Sixth_Practice_14 Practice_14.c)
add_executable(CPrimePlus_Sixth_Practice_15 Practice_15.c)
add_executable(CPrimePlus_Sixth_Practice_16 Practice_16.c)
add_executable(CPrimePlus_Sixth_Practice_17 Practice_17.c)
add_executable(CPrimePlus_Sixth_Practice_18 Practice_18.c)