cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Fourteenth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Fourteenth main.c)
add_executable(CPrimePlus_Fourteenth_Book_1 Book_1.c)
add_executable(CPrimePlus_Fourteenth_Book_2 Book_2.c)
add_executable(CPrimePlus_Fourteenth_Book_3 Book_3.c)
add_executable(CPrimePlus_Fourteenth_Book_4 Book_4.c)
add_executable(CPrimePlus_Fourteenth_Book_5 Book_5.c)
add_executable(CPrimePlus_Fourteenth_Book_6 Book_6.c)
add_executable(CPrimePlus_Fourteenth_Book_7 Book_7.c)
add_executable(CPrimePlus_Fourteenth_Book_8 Book_8.c)
add_executable(CPrimePlus_Fourteenth_Book_9 Book_9.c)
add_executable(CPrimePlus_Fourteenth_Book_10 Book_10.c)
add_executable(CPrimePlus_Fourteenth_Book_11 Book_11.c)
add_executable(CPrimePlus_Fourteenth_Book_12 Book_12.c)
add_executable(CPrimePlus_Fourteenth_Book_13 Book_13.c)
add_executable(CPrimePlus_Fourteenth_Book_14 Book_14.c)
add_executable(CPrimePlus_Fourteenth_Book_15 Book_15.c)
add_executable(CPrimePlus_Fourteenth_Book_16 Book_16.c)
add_executable(CPrimePlus_Fourteenth_Book_17 Book_17.c)
add_executable(CPrimePlus_Fourteenth_Book_18 Book_18.c)
add_executable(CPrimePlus_Fourteenth_Review_5 Review_5.c)
add_executable(CPrimePlus_Fourteenth_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Fourteenth_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Fourteenth_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Fourteenth_Practice_4_a Practice_4_a.c)
add_executable(CPrimePlus_Fourteenth_Practice_4_b Practice_4_b.c)
add_executable(CPrimePlus_Fourteenth_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Fourteenth_Practice_6 Practice_6.c Practice_6_data)
add_executable(CPrimePlus_Fourteenth_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Fourteenth_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Fourteenth_Practice_9 Practice_9.c)
add_executable(CPrimePlus_Fourteenth_Practice_10 Practice_10.c)
add_executable(CPrimePlus_Fourteenth_Practice_11 Practice_11.c)