cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Eleventh C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Eleventh main.c)
add_executable(CPrimePlus_Eleventh_Book_1 Book_1.c)
add_executable(CPrimePlus_Eleventh_Book_2 Book_2.c)
add_executable(CPrimePlus_Eleventh_Book_3 Book_3.c)
add_executable(CPrimePlus_Eleventh_Book_4 Book_4.c)
add_executable(CPrimePlus_Eleventh_Book_5 Book_5.c)
add_executable(CPrimePlus_Eleventh_Book_6 Book_6.c)
add_executable(CPrimePlus_Eleventh_Book_7 Book_7.c)
add_executable(CPrimePlus_Eleventh_Book_8 Book_8.c)
add_executable(CPrimePlus_Eleventh_Book_9 Book_9.c)
add_executable(CPrimePlus_Eleventh_Book_10 Book_10.c)
add_executable(CPrimePlus_Eleventh_Book_11 Book_11.c)
add_executable(CPrimePlus_Eleventh_Book_12 Book_12.c)
add_executable(CPrimePlus_Eleventh_Book_13 Book_13.c)
add_executable(CPrimePlus_Eleventh_Book_14 Book_14.c)
add_executable(CPrimePlus_Eleventh_Book_15 Book_15.c)
add_executable(CPrimePlus_Eleventh_Book_16 Book_16.c)
add_executable(CPrimePlus_Eleventh_Book_17 Book_17.c)
add_executable(CPrimePlus_Eleventh_Book_18 Book_18.c)
add_executable(CPrimePlus_Eleventh_Book_19 Book_19.c)
add_executable(CPrimePlus_Eleventh_Book_20 Book_20.c)
add_executable(CPrimePlus_Eleventh_Book_21 Book_21.c)
add_executable(CPrimePlus_Eleventh_Book_22 Book_22.c)
add_executable(CPrimePlus_Eleventh_Book_23 Book_23.c)
add_executable(CPrimePlus_Eleventh_Book_24 Book_24.c)
add_executable(CPrimePlus_Eleventh_Book_25 Book_25.c)
add_executable(CPrimePlus_Eleventh_Book_26 Book_26.c)
add_executable(CPrimePlus_Eleventh_Book_27 Book_27.c)
add_executable(CPrimePlus_Eleventh_Book_28 Book_28.c)
add_executable(CPrimePlus_Eleventh_Book_29 Book_29.c)
add_executable(CPrimePlus_Eleventh_Book_30 Book_30.c)
add_executable(CPrimePlus_Eleventh_Review_9 Review_9.c)
add_executable(CPrimePlus_Eleventh_Review_10 Review_10.c)
add_executable(CPrimePlus_Eleventh_Review_11 Review_11.c)
add_executable(CPrimePlus_Eleventh_Review_12 Review_12.c)
add_executable(CPrimePlus_Eleventh_Review_13 Review_13.c)
add_executable(CPrimePlus_Eleventh_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Eleventh_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Eleventh_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Eleventh_Practice_3_type_2 Practice_3_type_2.c)
add_executable(CPrimePlus_Eleventh_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Eleventh_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Eleventh_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Eleventh_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Eleventh_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Eleventh_Practice_9 Practice_9.c)
add_executable(CPrimePlus_Eleventh_Practice_10 Practice_10.c)
add_executable(CPrimePlus_Eleventh_Practice_11 Practice_11.c)
add_executable(CPrimePlus_Eleventh_Practice_12 Practice_12.c)
add_executable(CPrimePlus_Eleventh_Practice_13 Practice_13.c)
add_executable(CPrimePlus_Eleventh_Practice_14 Practice_14.c)
add_executable(CPrimePlus_Eleventh_Practice_15 Practice_15.c)
add_executable(CPrimePlus_Eleventh_Practice_16 Practice_16.c)