cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Fifth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Fifth main.c)
add_executable(CPrimePlus_Fifth_Book_1 Book_1.c)
add_executable(CPrimePlus_Fifth_Book_2 Book_2.c)
add_executable(CPrimePlus_Fifth_Book_3 Book_3.c)
add_executable(CPrimePlus_Fifth_Book_4 Book_4.c)
add_executable(CPrimePlus_Fifth_Book_5 Book_5.c)
add_executable(CPrimePlus_Fifth_Book_6 Book_6.c)
add_executable(CPrimePlus_Fifth_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Fifth_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Fifth_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Fifth_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Fifth_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Fifth_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Fifth_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Fifth_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Fifth_Practice_9 Practice_9.c)