cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Seventh C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Seventh main.c)
add_executable(CPrimePlus_Seventh_Book_1 Book_1.c)
add_executable(CPrimePlus_Seventh_Book_2 Book_2.c)
add_executable(CPrimePlus_Seventh_Book_3 Book_3.c)
add_executable(CPrimePlus_Seventh_Book_4 Book_4.c)
add_executable(CPrimePlus_Seventh_Book_5 Book_5.c)
add_executable(CPrimePlus_Seventh_Book_6 Book_6.c)
add_executable(CPrimePlus_Seventh_Book_7 Book_7.c)
add_executable(CPrimePlus_Seventh_Book_8 Book_8.c)
add_executable(CPrimePlus_Seventh_Book_9 Book_9.c)
add_executable(CPrimePlus_Seventh_Book_10 Book_10.c)
add_executable(CPrimePlus_Seventh_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Seventh_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Seventh_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Seventh_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Seventh_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Seventh_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Seventh_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Seventh_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Seventh_Practice_8_improve Practice_8_improve.c)
add_executable(CPrimePlus_Seventh_Practice_9 Practice_9.c)
add_executable(CPrimePlus_Seventh_Practice_10 Practice_10.c)
add_executable(CPrimePlus_Seventh_Practice_11 Practice_11.c)
add_executable(CPrimePlus_Seventh_Practice_11_improve Practice_11_improve.c)
