cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Sixteenth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Sixteenth main.c)
add_executable(CPrimePlus_Sixteenth_Book_1 Book_1.c)
add_executable(CPrimePlus_Sixteenth_Book_2 Book_2.c)
add_executable(CPrimePlus_Sixteenth_Book_3 Book_3.c)
add_executable(CPrimePlus_Sixteenth_Book_4 Book_4.c)