cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Sixteenth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Sixteenth main.c)
add_executable(CPrimePlus_Sixteenth_Book_1 Book_1.c)
add_executable(CPrimePlus_Sixteenth_Book_2 Book_2.c)
add_executable(CPrimePlus_Sixteenth_Book_3 Book_3.c)
add_executable(CPrimePlus_Sixteenth_Book_4 Book_4.c)
add_executable(CPrimePlus_Sixteenth_Book_5 Book_5_main.c Book_5_function.c Book_5.h)
add_executable(CPrimePlus_Sixteenth_Book_6 Book_6.c)
add_executable(CPrimePlus_Sixteenth_Book_7 Book_7.c)
add_executable(CPrimePlus_Sixteenth_Book_8 Book_8.c)
add_executable(CPrimePlus_Sixteenth_Book_9 Book_9.c)
add_executable(CPrimePlus_Sixteenth_Book_10 Book_10.c)
add_executable(CPrimePlus_Sixteenth_Book_11 Book_11.c)
add_executable(CPrimePlus_Sixteenth_Book_12 Book_12.c)
add_executable(CPrimePlus_Sixteenth_Book_13 Book_13.c)
add_executable(CPrimePlus_Sixteenth_Book_14 Book_14.c)
add_executable(CPrimePlus_Sixteenth_Book_15 Book_15.c)
add_executable(CPrimePlus_Sixteenth_Book_16 Book_16.c)
add_executable(CPrimePlus_Sixteenth_Book_17 Book_17.c)
add_executable(CPrimePlus_Sixteenth_Book_18 Book_18.c)
add_executable(CPrimePlus_Sixteenth_Practice_1 Practice_1.h Practice_1.c)
add_executable(CPrimePlus_Sixteenth_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Sixteenth_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Sixteenth_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Sixteenth_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Sixteenth_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Sixteenth_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Sixteenth_Review_9 Review_9.c)