cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Tenth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Tenth main.c)
add_executable(CPrimePlus_Tenth_Book_1 Book_1.c)
add_executable(CPrimePlus_Tenth_Book_2 Book_2.c)
add_executable(CPrimePlus_Tenth_Book_3 Book_3.c)
add_executable(CPrimePlus_Tenth_Book_4 Book_4.c)
add_executable(CPrimePlus_Tenth_Book_5 Book_5.c)
add_executable(CPrimePlus_Tenth_Book_6 Book_6.c)
add_executable(CPrimePlus_Tenth_Book_7 Book_7.c)
add_executable(CPrimePlus_Tenth_Book_8 Book_8.c)
add_executable(CPrimePlus_Tenth_Book_9 Book_9.c)
add_executable(CPrimePlus_Tenth_Book_10 Book_10.c)
add_executable(CPrimePlus_Tenth_Book_11 Book_11.c)
add_executable(CPrimePlus_Tenth_Book_12 Book_12.c)
add_executable(CPrimePlus_Tenth_Book_13 Book_13.c)
add_executable(CPrimePlus_Tenth_Book_14 Book_14.c) # 一个地址 两个值
add_executable(CPrimePlus_Tenth_Book_15 Book_15.c) # C语言使用const值声明数组大小 不报错
add_executable(CPrimePlus_Tenth_Book_16 Book_16.c)
add_executable(CPrimePlus_Tenth_Book_17 Book_17.c) # 变长数组
add_executable(CPrimePlus_Tenth_Book_18 Book_18.c) # 复合字面量
add_executable(CPrimePlus_Tenth_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Tenth_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Tenth_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Tenth_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Tenth_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Tenth_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Tenth_Practice_7 Practice_7.c)
add_executable(CPrimePlus_Tenth_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Tenth_Practice_9 Practice_9.c)
add_executable(CPrimePlus_Tenth_Practice_10 Practice_10.c)
add_executable(CPrimePlus_Tenth_Practice_11 Practice_11.c)
add_executable(CPrimePlus_Tenth_Practice_12 Practice_12.c)
add_executable(CPrimePlus_Tenth_Practice_13 Practice_13.c)
add_executable(CPrimePlus_Tenth_Practice_14 Practice_14.c)

