cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Practice C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Practice0.0 main.c)
add_executable(CPrimePlus_Practice0.1 Practice_1.c)
add_executable(CPrimePlus_Practice0.2 Practice_2.c)
add_executable(CPrimePlus_Practice0.3 Practice_3.c)
add_executable(CPrimePlus_Practice0.4 Practice_4.c)
add_executable(CPrimePlus_Practice0.5 Practice_5.c)
add_executable(CPrimePlus_Practice0.6 Practice_6.c)
add_executable(CPrimePlus_Practice0.7 Practice_7.c)
add_executable(CPrimePlus_Practice0.8 Practice_8.c)