cmake_minimum_required(VERSION 3.16)
project(CPrimePlus_Thirteenth C)

set(CMAKE_C_STANDARD 99)

add_executable(CPrimePlus_Thirteenth main.c)
add_executable(CPrimePlus_Thirteenth_Book_1 Book_1.c)
add_executable(CPrimePlus_Thirteenth_Book_2 Book_2.c)
add_executable(CPrimePlus_Thirteenth_Book_3 Book_3.c)
add_executable(CPrimePlus_Thirteenth_Book_4 Book_4.c)
add_executable(CPrimePlus_Thirteenth_Book_5 Book_5.c)
add_executable(CPrimePlus_Thirteenth_Book_6 Book_6.c)
add_executable(CPrimePlus_Thirteenth_Review_4 Review_4.c)
add_executable(CPrimePlus_Thirteenth_Review_5 Review_5.c)
add_executable(CPrimePlus_Thirteenth_Practice_1 Practice_1.c)
add_executable(CPrimePlus_Thirteenth_Practice_2 Practice_2.c)
add_executable(CPrimePlus_Thirteenth_Practice_3 Practice_3.c)
add_executable(CPrimePlus_Thirteenth_Practice_4 Practice_4.c)
add_executable(CPrimePlus_Thirteenth_Practice_5 Practice_5.c)
add_executable(CPrimePlus_Thirteenth_Practice_6 Practice_6.c)
add_executable(CPrimePlus_Thirteenth_Practice_7_a Practice_7_a.c)
add_executable(CPrimePlus_Thirteenth_Practice_7_b Practice_7_b.c)
add_executable(CPrimePlus_Thirteenth_Practice_8 Practice_8.c)
add_executable(CPrimePlus_Thirteenth_Practice_9 Practice_9.c)
add_executable(CPrimePlus_Thirteenth_Practice_10 Practice_10.c)
add_executable(CPrimePlus_Thirteenth_Practice_11 Practice_11.c)
add_executable(CPrimePlus_Thirteenth_Practice_12 Practice_12.c)
add_executable(CPrimePlus_Thirteenth_Practice_13 Practice_13.c)
add_executable(CPrimePlus_Thirteenth_Practice_14 Practice_14.c)
